# statement-extractor

./: .env.example  .gitignore  CLAUDE.md  COMPANY_DB.md  ENTITY_DATABASE.md  README.md  eslint.config.mjs  mdx-components.tsx  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml
.claude/commands/: commit.md  doc.md  pipeline.md  publish.md  review.md  test.md
local-server/: .env.example  README.md  pyproject.toml  server.py
notebooks/: statement_extractor_demo.ipynb
runpod/: Dockerfile  Dockerfile.base  README.md  build-base.sh  build.sh  handler.py
scripts/: .env.example  migration.sql  pyproject.toml  upload_model.py  upload_training_data.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: about-sections.tsx  canonical-predicates.tsx  documentation.tsx  export-formats.tsx  footer.tsx  header.tsx  llm-prompts.tsx  pipeline-diagram.tsx  rate-limit-banner.tsx  relationship-graph.tsx  statement-editor.tsx  statement-input.tsx  statement-list.tsx  statement-taxonomy.tsx  warm-up-dialog.tsx
src/lib/: cache.ts  cached-example.ts  shiki.ts  statement-parser.ts  types.ts  user-uuid.ts
statement-extractor-lib/: CLAUDE.md  ENTITY_DATABASE.md  HUGGINGFACE_README.md  PUBLISHING.md  README.md  extract.sh  pyproject.toml
statement-extractor-lib/scripts/: backfill_org_embeddings.py  rebuild_locations.py  resolve_location_parents.py
statement-extractor-lib/tests/: __init__.py  conftest.py  test_canonicalization.py  test_database_canon.py  test_document_pipeline.py  test_integration.py  test_models.py  test_pipeline.py  test_pipeline_e2e.py  (+3 more)
(+86 files in other folders)
